# garmin-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
garmin_mcp_server/: __init__.py  __main__.py  client.py  config.py  helpers.py  login.py  server.py
tests/: test_client.py  test_helpers.py  test_server.py
